refactor : 카드 리스트 DTO 반환을 brand 기준으로 묶어서 하도록 수정