@@ -1,8 +1,10 @@
 package org.soptcollab.web1.hyundaicard.api.service.card;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.soptcollab.web1.hyundaicard.api.service.card.dto.CardBrandGroupDto;
 import org.soptcollab.web1.hyundaicard.api.service.card.dto.CardResponseDto;
 import org.soptcollab.web1.hyundaicard.domain.card.Card;
 import org.soptcollab.web1.hyundaicard.domain.card.CardRepository;
@@ -14,11 +16,24 @@ public class CardService {
 
   private final CardRepository cardRepository;
 
-  public List<CardResponseDto> findAll() {
+  public List<CardBrandGroupDto> findUpTo15() {
 
-    return cardRepository.findAll().stream()
-        .limit(15) //15개까지만 조회
-        .map(card -> CardResponseDto.from(card))
-        .collect(Collectors.toList());
+    List<CardResponseDto> allCards = cardRepository.findAll().stream()
+        .limit(15) // 최대 15개까지만 조회
+        .map(CardResponseDto::from)
+        .toList();
+
+    // Car
+    Map<String, List<CardResponseDto>> groupedByBrand = allCards.stream()
+        .collect(Collectors.groupingBy(CardResponseDto::brand));
+
+    return groupedByBrand.entrySet().stream()
+        .map(entry -> new CardBrandGroupDto(entry.getKey(), entry.getValue()))
+        .toList();
   }
 }
+
+
+
+
+
